--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -863,7 +863,7 @@ footer {
     }
 
 }
-@media only screen and (max-width: 412px) {
+@media only screen and (min-width: 320px) and (max-width: 420px) {
     .container {
         /*box-sizing: border-box;*/
         width: 100%;
