--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -310,7 +310,7 @@ button .fa-solid {
 }
 
 .gallery img{
-    position: relative;
+    /*position: relative;*/
     width: 100%;
     /*margin-left: 10px;*/
     
